# pure_c_server

./: CMakeLists.txt  README.md  startDB.bat
headers/controller/: english_controller.h  generic_controller.h  italian_controller.h
headers/controller_headers/: generic_controller.h
headers/db/: db.h  db_connection.h
headers/repository/: english_repository.h  italian_repository.h
headers/service/: english_service.h  italian_service.h
headers/utility/: utility.h
src/: gateway.c  server.c
src/controller/: english_controller.c  italian_controller.c
src/db/: db.c  db_connection.c
src/db/utility/: stopDB.bat  useful_psql_commands.txt
src/db/utility/scripts/: create_english_table.sql  create_italian_table.sql
src/handlers/: gateway.c  requests_handler.c
src/handlers/controller/: english_controller.c  italian_controller.c
src/handlers/headers/: gateway.h  requests_handler.h
src/handlers/headers/controller_headers/: english_controller.h  italian_controller.h
src/repository/: english_repository.c  italian_repository.c
src/service/: english_service.c  italian_service.c
src/utility/: utility.c  utility.h
